--- a/Clase2/index.html
+++ b/Clase2/index.html
@@ -16,12 +16,12 @@
         <p class="profile__city">London, United Kingdom</p>
         <p class="profile__description">"Front-end developer and avid reader."</p>
     </section>
-    <section>
+    <section class="dos">
         <button class="profile__btn"><p>GitHub</p></button>
         <button class="profile__btn">Frontend Mentor</button>
         <button class="profile__btn">LinkedIn</button>
         <button class="profile__btn">Twitter</button>
-        <button class="profile__btn">Instagram</button>
+        <button class="profile__btn"><p>Instagram<p></button>
     </section>
   </main>
 </body>
